--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@ header .nav .logo > h1 > a {
   font-weight: 100;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   header .nav .logo > h1 > a {
     font-size: 1.5rem;
   }
@@ -101,7 +101,7 @@ header .nav-menu-link:hover {
   border-bottom: 2px solid #d9534f;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   header .nav .nav-menu {
     position: absolute;
     top: -100%;
@@ -191,19 +191,19 @@ header .nav .humburger.active .bar::after {
           transform: translateY(-10px) rotate(-45deg);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   header .nav .humburger {
     display: block;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   header .nav {
     padding: 0 1rem;
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   header .nav {
     padding: 0 1.5rem;
   }
@@ -271,7 +271,7 @@ header .nav .humburger.active .bar::after {
           transform: scale(0.98);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .hero .hero-content {
     width: 100%;
     height: 75%;
@@ -280,7 +280,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .hero .hero-content {
     width: 55%;
     margin-top: 2rem;
@@ -361,7 +361,7 @@ header .nav .humburger.active .bar::after {
           transform: scale(0.98);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .hero .hero-form {
     width: 100%;
   }
@@ -373,7 +373,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .hero .hero-form {
     width: 42%;
   }
@@ -399,7 +399,7 @@ header .nav .humburger.active .bar::after {
           transform: skewy(-4deg);
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .hero {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -422,7 +422,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .hero {
     padding: 0 1.5rem;
     height: 40vh;
@@ -446,7 +446,7 @@ header .nav .humburger.active .bar::after {
   padding-bottom: 4rem;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .stats-subhead {
     width: 100%;
     text-align: center;
@@ -454,7 +454,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .stats-subhead {
     width: 100%;
     text-align: center;
@@ -512,7 +512,7 @@ header .nav .humburger.active .bar::after {
   color: #047aed;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .stats-dwnlds {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -533,7 +533,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .stats-dwnlds {
     width: 100%;
     display: -webkit-box;
@@ -600,7 +600,7 @@ header .nav .humburger.active .bar::after {
   text-align: center;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .stats .stats-install {
     display: -ms-grid;
     display: grid;
@@ -625,7 +625,7 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .stats .stats-install {
     display: -ms-grid;
     display: grid;
@@ -648,16 +648,149 @@ header .nav .humburger.active .bar::after {
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 625px) {
   .stats {
+    height: auto;
     padding: 5rem 1rem;
   }
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
+@media screen and (min-width: 626px) and (max-width: 768px) {
   .stats {
-    height: 80vh;
+    height: auto;
     padding: 5rem 1.5rem 2rem 1.5rem;
+  }
+}
+
+.cloud {
+  width: 100%;
+  padding: 0 8rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  gap: 1rem;
+  width: 100%;
+  height: 50vh;
+  background-color: #047aed;
+  margin: 3rem 0;
+}
+
+.cloud .cloud-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1rem;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  color: #f4f4f4;
+}
+
+.cloud .cloud-content-head {
+  font-size: 2rem;
+  font-weight: 100;
+}
+
+.cloud .cloud-content-desc {
+  font-size: 1rem;
+  margin: 1.5rem 0;
+}
+
+.cloud .cloud-content-btn {
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-family: "Didact Gothic", sans-serif;
+  color: #f4f4f4;
+  border: none;
+  border-radius: 7px;
+  background-color: #002240;
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 625px) {
+  .cloud .cloud-content {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 626px) and (max-width: 768px) {
+  .cloud .cloud-content {
+    width: 100%;
+    padding-top: 2rem;
+  }
+}
+
+.cloud > picture > img {
+  width: 400px;
+}
+
+@media screen and (max-width: 625px) {
+  .cloud {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: warp;
+        flex-wrap: warp;
+    gap: 1rem;
+    height: auto;
+    padding: 2rem 1rem;
+  }
+}
+
+@media screen and (min-width: 626px) and (max-width: 768px) {
+  .cloud {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: warp;
+        flex-wrap: warp;
+    gap: 1rem;
+    height: auto;
+    padding: 0 1.5rem;
   }
 }
 /*# sourceMappingURL=styles.css.map */
