--- a/styles/_resets.scss
+++ b/styles/_resets.scss
@@ -7,6 +7,7 @@ html ,body {
     max-width: 100vw;
     height: 100%;
     font-family: $font-secondary;
+    overflow-x: hidden;
 }
 ul {
     list-style: none;
