--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,8 +6,10 @@
 @import 'resets';
 @import 'config';
 @import 'navbar';
-@import 'hero';
-@import 'stats';
-@import 'cloud';
-@import 'lang';
+@import 'index-hero';
+@import 'index-stats';
+@import 'index-cloud';
+@import 'index-lang';
 @import 'footer';
+@import 'docs-hero';
+@import 'docs-install';
