feature page addedd

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,10 +6,11 @@
 @import 'resets';
 @import 'config';
 @import 'navbar';
-@import 'index-hero';
-@import 'index-stats';
-@import 'index-cloud';
-@import 'index-lang';
+@import 'hero';
+@import 'stats';
+@import 'cloud';
+@import 'lang';
 @import 'footer';
 @import 'docs-hero';
 @import 'docs-install';
+@import 'features';
