--- a/styles/styles.css
+++ b/styles/styles.css
@@ -989,6 +989,7 @@ footer .footer-social > a:hover {
   width: 100%;
   height: 50vh;
   background-color: #047aed;
+  color: #f4f4f4;
 }
 
 .hero-docs .hero-docs_content {
@@ -1010,7 +1011,6 @@ footer .footer-social > a:hover {
   gap: 1rem;
   width: 50%;
   height: 100%;
-  color: #f4f4f4;
 }
 
 .hero-docs .hero-docs_content-head {
@@ -1261,6 +1261,137 @@ footer .footer-social > a:hover {
     gap: 1rem;
     gap: 2rem;
     padding: 2rem 1.5rem;
+  }
+}
+
+.platform {
+  color: #333;
+  background-color: #f4f4f4;
+}
+
+.features {
+  width: 100%;
+  padding: 0 8rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+  gap: 2rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1.5rem 0;
+}
+
+.features .features-grid {
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  padding: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  gap: 1rem;
+  gap: 2rem;
+}
+
+.features .features-grid:first-child {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/ span 3;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+@media screen and (min-width: 626px) and (max-width: 768px) {
+  .features .features-grid:first-child {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  .features .features-grid:first-child {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
+.features .features-grid:nth-child(2) {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/ span 2;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+@media screen and (min-width: 626px) and (max-width: 768px) {
+  .features .features-grid:nth-child(2) {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  .features .features-grid:nth-child(2) {
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+}
+
+@media screen and (min-width: 626px) and (max-width: 768px) {
+  .features {
+    padding: 0 1.5rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    gap: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 625px) {
+  .features {
+    padding: 0 1rem;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    gap: 2rem;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 /*# sourceMappingURL=styles.css.map */
